<resources>
    <string name="app_name">BimboNet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signInText">Sign In</string>
    <string name="signUpText">Sign Up</string>
    <string name="SignOutText">Sign Out</string>
    <string name="beerList">Beer List</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterPassword">Enter your password</string>
    <string name="isRegistered">Not Registered Yet ? Sign Up</string>
    <string name="haveAccount">You have an account? Sign In</string>


</resources>